--- a/package.json
+++ b/package.json
@@ -8,23 +8,28 @@
     "ip": "127.0.0.1"
   },
   "scripts": {
-    "install": "sudo npm i -g pm2 && sudo npm i -g bower && bower install",
+    "install": "[ \"$NODE_ENV\" != production ] && sudo npm i -g pm2",
     "start": "pm2 start ./bin/www --node-args \"--max_old_space_size=500\"",
     "stop": "pm2 stop all",
     "restart": "pm2 restart all"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.5",
+    "angular": "^1.6.5",
+    "angular-resource": "^1.6.5",
     "body-parser": "^1.17.2",
-    "bower": "^1.8.0",
     "compression": "^1.7.0",
+    "connect-mongo": "^1.3.2",
     "cors": "^2.8.4",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-session": "^1.15.4",
     "helmet": "^3.6.1",
     "mongoose": "^4.11.3",
     "morgan": "^1.8.2",
     "pug": "^2.0.0-rc.2",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "uuid": "^3.1.0"
   }
 }
